// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSelector render with projects 1`] = `
<div>
  <div
    class="projectSelector"
  >
    <button
      class="bp3-button bp3-disabled bp3-minimal button projectButton"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          >
            projectLabel
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-size-normal"
            style="--text-line-clamp: 1; width: 100px;"
          >
            selectProject
          </p>
        </div>
      </span>
    </button>
    <div
      class="bp3-popover-wrapper projectSelect bp3-dark bp3-fill"
    >
      <div
        class="bp3-popover-target"
      >
        <div
          class=""
        >
          <button
            class="bp3-button bp3-minimal button selectButton"
            data-testid="project-select-dropdown"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-caret-right"
              icon="caret-right"
            >
              <svg
                data-icon="caret-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  caret-right
                </desc>
                <path
                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pickProjectHelp"
    style="background-image: url(test-file-stub);"
  >
    pickProject
  </div>
</div>
`;

exports[`ProjectSelector render with projects 2`] = `
<div>
  <div
    class="projectSelector"
  >
    <button
      class="bp3-button bp3-disabled bp3-minimal button projectButton"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-small"
          >
            projectLabel
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--font-size-normal"
            style="--text-line-clamp: 1; width: 100px;"
          >
            selectProject
          </p>
        </div>
      </span>
    </button>
    <div
      class="bp3-popover-wrapper projectSelect bp3-dark bp3-fill"
    >
      <div
        class="bp3-popover-target bp3-popover-open"
      >
        <div
          class=""
        >
          <button
            class="bp3-button bp3-minimal button selectButton"
            data-testid="project-select-dropdown"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-caret-right"
              icon="caret-right"
            >
              <svg
                data-icon="caret-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  caret-right
                </desc>
                <path
                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
      >
        <div
          class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
          style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
        >
          <div
            class="bp3-popover bp3-minimal bp3-select-popover"
          >
            <div
              class="bp3-popover-content"
            >
              <div>
                <div
                  class="bp3-input-group"
                >
                  <span
                    class="bp3-icon bp3-icon-search"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input"
                    placeholder="projectSelector.placeholder"
                    type="text"
                    value=""
                  />
                </div>
                <ul
                  class="bp3-menu"
                >
                  <li
                    class=""
                  >
                    <a
                      class="bp3-menu-item bp3-popover-dismiss"
                    >
                      <div
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
                          >
                            TestCiproject
                          </p>
                        </div>
                      </div>
                    </a>
                  </li>
                  <li
                    class=""
                  >
                    <a
                      class="bp3-menu-item bp3-popover-dismiss"
                    >
                      <div
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
                          >
                            test11
                          </p>
                        </div>
                      </div>
                    </a>
                  </li>
                  <li
                    class=""
                  >
                    <a
                      class="bp3-menu-item bp3-popover-dismiss"
                    >
                      <div
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
                          >
                            Project 1
                          </p>
                        </div>
                      </div>
                    </a>
                  </li>
                  <li
                    class=""
                  >
                    <a
                      class="bp3-menu-item bp3-popover-dismiss"
                    >
                      <div
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <div
                          class="Layout--vertical StyledProps--main"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white"
                          >
                            fdfder32432
                          </p>
                        </div>
                      </div>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="pickProjectHelp"
    style="background-image: url(test-file-stub);"
  >
    pickProject
  </div>
</div>
`;
